[workspace]
members = ["ibm-quantum-platform-api"]
resolver = "2"

[package]
name = "qiskit-ibm-runtime"
version = "0.38.0"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_ibm_runtime"
crate-type = ["cdylib"]

[workspace.package]
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"

[dependencies]
binrw = "0.13"
base64-simd = "0.8"
flate2 = "1.0"
ibm-quantum-platform-api = { path = "ibm-quantum-platform-api"}
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
