[workspace]
members = ["ibm-quantum-platform-api", "ibmcloud-iam-api", "ibmcloud-global-search-api"]
resolver = "2"

[package]
name = "qiskit-ibm-runtime"
version = "0.38.0"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_ibm_runtime"
crate-type = ["cdylib"]

[workspace.package]
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"

[dependencies]
binrw = "0.13"
base64-simd = "0.8"
flate2 = "1.0"
ibm-quantum-platform-api = { path = "ibm-quantum-platform-api"}
ibmcloud-iam-api = { path = "ibmcloud-iam-api"}
ibmcloud-global-search-api = { path = "ibmcloud-global-search-api"}
serde_json = "1.0"
serde = "1.0"
reqwest = "^0.12"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
