[package]
name = "ibmcloud-iam-api"
version = "1.0.0"
authors = ["Qiskit Team"]
description = "The IAM Identity Service API allows for the management of Account Settings and Identities (Service IDs, ApiKeys)."
# Override this license by providing a License Object in the OpenAPI.
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
